# xdr_rpc

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  build_lib.bat  meson.build  msbuild_all.bat
.github/workflows/: deploy.yml  prebuild.yml  test_pull_to_master.yml
.gitlab/workflows/: deploy.yml  prebuild.yml  test_pull_to_master.yml
include/rpc/: auth.h  auth_des.h  auth_unix.h  clnt.h  dk_additions.h  doocs_rpc_unix_like_functions.h  nettype.h  pmap_clnt.h  pmap_prot.h  pmap_rmt.h  redirected_win_rpc.h  rpc.h  rpc.h_2015.12.15  rpc_com.h  rpc_msg.h  rpc_unix_like_functions.h  rpcb_prot.h  svc.h  svc_auth.h  svc_soc.h  types.h  wrpc_first_com_include.h  xdr.h  xdr_rpc_internal.h
prj/common/common_mkfl/: windows.common.Makefile
prj/common/common_qt/: daqcollector_common.pri  daqcollector_event_based_common.pri  doocs_client_common.pri  doocs_server_common.pri  matlab_matrix_common.pri  mex_common.pri  root_no_gui_common.pri  root_no_gui_no_libs_common.pri  sys_common.pri
prj/common/common_vs/: mini_xdr_rpc_common.props  xdr_rpc_common.props
prj/core/doocs_win_xdr_rpc_vs/: doocs_win_xdr_rpc.sln  doocs_win_xdr_rpc.vcxproj  doocs_win_xdr_rpc.vcxproj.filters  final_doocs_win_xdr_rpc.vcxproj  final_doocs_win_xdr_rpc.vcxproj.filters  (+2 more)
scripts/.cicd/: win_test_pull_to_master_build.bat  win_test_pull_to_master_test.bat
src/core/: auth_non.c  auth_uni.c  clnt_gen.c  clnt_per.c  clnt_per_singlethreaded.c  clnt_tcp.c  clnt_udp.c  doocs_rpc_auth_functions.c  doocs_rpc_client_gen.c  doocs_rpc_entry.c  doocs_rpc_unix_like_functions.c  doocs_rpc_xdr_functions.c  doocs_rpc_xdr_mem.c  doocs_rpc_xdr_rec.c  empty_template_doocs_rpc_xxx.c  emscripten_threading.cpp  meson.build  mini_xdr_rpc_entry.c  mini_xdr_rpc_missing_functions.c  mini_xdr_rpc_src_private.h  pmap_get.c  rpc_prot.c  xdr.c  xdr_array.c  xdr_float.c  xdr_mem.c  xdr_rec.c  xdr_reference.c  xdr_rpc_debug.c
src/core/for_rpc_bind/: pmap_pro.c  svc_udp.c
src/core/for_server/: clnt_per.c  get_myad.c  pmap_cln.c  rpc_call.c  svc.c  svc_auth.c  svc_autu.c  svc_run.c  svc_tcp.c
src/core/include/: mini_xdr_rpc_src_private.h  xdr_rpc_debug.h  xdr_rpc_priv_lists.h
src/tmp/: AUTHUNIX.C  auth_non.c  auth_uni.c  clnt_tcp.c  mini_xdr_rpc_src_private.h  pmap_get.c  rpc_prot.c  xdr.c  xdr_mem.c  xdr_rec.c
workspaces/xdr_rpc-all_vs/: xdr_rpc-all.sln  xdr_rpc-all.vcxproj
workspaces/xdr_rpc_all_qt/: xdr_rpc_all.pro
workspaces/xdr_rpc_vs/: xdr_rpc.sln  xdr_rpc.vcxproj
(+22 files in other folders)
